--- a/app/views/assessments/_quiz_template.html.erb
+++ b/app/views/assessments/_quiz_template.html.erb
@@ -31,7 +31,7 @@
         </div>
 
         <div class="disp opt4">
-        <input type="radio" name="option" value="d" value="<%=$puzzles.answer%>" required>
+        <input type="radio" name="option"  value="<%=$puzzles.answer%>" required>
         <input type="text" name="option4"  placeholder="Add answer 4" value="<%=$puzzles.option4%>" required>
         </div>
         </div>
@@ -61,13 +61,13 @@
         <div class="disp_opts">
           <div class="quiz_row">
 
-           <div class="disp opt1"><input type="radio" name="option"  required><input type="text" name="option1"  placeholder="Add answer 1"required></div>
-           <div class="disp opt2"><input type="radio" name="option" required><input type="text" name="option2"  placeholder="Add answer 2"required></div>
+           <div class="disp opt1"><input type="radio" name="option" value="a" required><input type="text" name="option1"  placeholder="Add answer 1"required></div>
+           <div class="disp opt2"><input type="radio" name="option" value="b" required><input type="text" name="option2"  placeholder="Add answer 2"required></div>
           </div>
         </div>
         <div class="quiz_row">
         <div class="disp opt3">
-        <input type="radio" name="option" required>
+        <input type="radio" name="option" value="c"required>
         <input type="text" name="option3" placeholder="Add answer 3"required>
         </div>
 
