--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -25,7 +25,7 @@
           </a>
           <ul class="dropdown">
             <li>
-              <a href="">Name</a>
+              <a href=""><%=logged_user["name"]%></a>
             </li>
             <li>
               <a href="">Logout</a>
